adjust contact section wording

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <h2>Wanna Discuss?</h2>
       <p>Ask me anything — life, coding, frontend development, or Islam.</p>
       <p>
-        Via
+        Through
         <a href="mailto:alkahfi25@gmail.com">email</a> or
         <a href="https://www.linkedin.com/in/alcoffeeocha/">LinkedIn</a>.
       </p>
