set font, adjust the look

--- a/about/index.html
+++ b/about/index.html
@@ -24,7 +24,8 @@
           <p>
             Being a nomad isn't easy, but it's what life has given me. I spent
             most of my childhood in Balikpapan, Borneo island. It was a lively
-            place with beautiful forests and beaches 🏖️. Now, I live in South
+            place with beautiful forest and
+            <span class="_nowrap">beach 🏖️</span>. Now, I live in South
             Tangerang. Life here is more urban and fast-paced. Moving around has
             been challenging, but each place has given me unique memories and
             experiences.
