--- a/index.html
+++ b/index.html
@@ -6,16 +6,36 @@
     <title>Muhammad Alkahfi</title>
     <link rel="stylesheet" href="all.css?v=210624" />
     <link rel="icon" type="image/x-icon" href="assets/favicon-straw.ico" />
-    <meta name="description" content="About a human being called Alkahfi" />
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Muhammad Alkahfi" />
+    <meta
+      name="description"
+      content="Meet Alkahfi — a human fueled by coffee, matcha, and curiosity."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="profile" />
+    <meta property="og:url" content="https://kahfi.dev/" />
     <meta property="og:title" content="Muhammad Alkahfi" />
     <meta
       property="og:description"
-      content="About a human being called Alkahfi"
+      content="Meet Alkahfi — a human fueled by coffee, matcha, and curiosity."
     />
-    <meta property="og:type" content="profile" />
-    <meta property="og:url" content="https://kahfi.dev" />
     <meta
       property="og:image"
+      content="https://kahfi.dev/assets/ethical-hacker-wannabe.jpg"
+    />
+
+    <!-- X (Twitter) -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://kahfi.dev" />
+    <meta property="twitter:title" content="Muhammad Alkahfi" />
+    <meta
+      property="twitter:description"
+      content="Meet Alkahfi — a human fueled by coffee, matcha, and curiosity."
+    />
+    <meta
+      property="twitter:image"
       content="https://kahfi.dev/assets/ethical-hacker-wannabe.jpg"
     />
   </head>
