remove invalid accessibility imple for navigational links

--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
         alt="a cup of coffee and small plate, feels like in warung kopi indonesia"
       />
       <p>Sip your coffee...<br /><br />Enjoy!</p>
-      <h2 id="menu-title">Stories</h2>
+      <h2>Stories</h2>
       <nav>
-        <ul role="menu" aria-labelledby="menu-title">
-          <li role="presentation">
-            <a role="menuitem" href="about">Who am I?</a>
+        <ul>
+          <li>
+            <a href="about">Who am I?</a>
           </li>
-          <li role="presentation">
-            <a role="menuitem" href="works">Lessons Learned from Past Work.</a>
+          <li>
+            <a href="works">Lessons Learned from Past Work.</a>
           </li>
         </ul>
       </nav>
