apply new theme

--- a/works/a-flutter-app-product.html
+++ b/works/a-flutter-app-product.html
@@ -10,14 +10,17 @@
   </head>
 
   <body>
-    <nav class="menu-links"><a href="/works">Back</a><a href="/">Home</a></nav>
     <div class="container">
+      <nav class="menu-links">
+        <a href="/works">Back</a>
+        <a href="/">Home</a>
+      </nav>
       <hr style="border-style: dashed" />
-      <header>
-        <h1>a Flutter App Product</h1>
-        <h2>So, this is Orthogonality</h2>
-      </header>
       <main>
+        <header>
+          <h1>a Flutter App Product</h1>
+          <h2>So, this is Orthogonality</h2>
+        </header>
         <div class="img-gallery -two-cols">
           <img
             width="300"
