--- a/showcase/tozai-line-train-route-map/index.html
+++ b/showcase/tozai-line-train-route-map/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>A Replica of Tozai Line Train Route Map</title>
     <link rel="stylesheet" href="./style.css" />
+    <meta name="robots" content="noindex, nofollow" />
   </head>
 
   <body>
