add new indonesian translations content

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           alt="a cup of coffee and small plate, feels like in warung kopi indonesia"
         />
         <p>Sip your coffee...<br /><br />Enjoy!</p>
-        <h2>Stories</h2>
+        <h2>Contents</h2>
         <nav>
           <ul>
             <li>
@@ -69,6 +69,11 @@
             </li>
             <li>
               <a href="works">Lessons Learned from Past Work.</a>
+            </li>
+            <li>
+              <a href="idn-translations"
+                >I translated some articles in Indonesian.</a
+              >
             </li>
           </ul>
         </nav>
