adjust 'works' dir so the url is clean

--- a/works/an-ecommerce-project/index.html
+++ b/works/an-ecommerce-project/index.html
@@ -99,7 +99,7 @@
               loading="lazy"
               width="300"
               height="400"
-              src="images/dcika/d-home.png"
+              src="/assets/dcika/d-home.png"
               alt="Screenshot 1"
             />
             <figcaption>Landing Page</figcaption>
@@ -110,7 +110,7 @@
               loading="lazy"
               width="300"
               height="400"
-              src="images/dcika/d-login.png"
+              src="/assets/dcika/d-login.png"
               alt="Screenshot 2"
             />
             <figcaption>Login Popup</figcaption>
@@ -121,7 +121,7 @@
               loading="lazy"
               width="300"
               height="400"
-              src="images/dcika/d-checkout.png"
+              src="/assets/dcika/d-checkout.png"
               alt="Screenshot 4"
             />
             <figcaption>Checkout Page</figcaption>
