--- a/works/index.html
+++ b/works/index.html
@@ -17,18 +17,18 @@
       <hr style="border-style: dashed" />
       <main>
         <header>
-          <h1>Lessons Learned from Past Work.</h1>
+          <h1 class="index-title">Lessons Learned from Past Work.</h1>
         </header>
         <nav>
           <ol>
             <li>
-              <a href="an-ecommerce-project.html"
+              <a href="an-ecommerce-project"
                 >First Look at Single Page Application | an E-Commerce
                 Project</a
               >
             </li>
             <li>
-              <a href="a-flutter-app-product.html"
+              <a href="a-flutter-app-product"
                 >So, this is Orthogonality | a Flutter App Product</a
               >
             </li>
