--- a/idn-translations/should-i-write-a-test-or-fix-a-bug/index.html
+++ b/idn-translations/should-i-write-a-test-or-fix-a-bug/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Alkahfi | Indonesia Translations | Haruskah saya menulis test atau
+      Alkahfi | Indonesian Translations | Haruskah saya menulis pengujian atau
       memperbaiki bug?
     </title>
     <link rel="stylesheet" href="/all.css?v=210624" />
